Ajout des check des plats sur les menus, mise en place de l'animation

--- a/2-la_note_enchantee.html
+++ b/2-la_note_enchantee.html
@@ -40,6 +40,9 @@
                             <p class="descriptive--details">Accompagnés de leur crème à la truffe</p>
                             <p class="descriptive--price">25€</p>
                         </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
 
@@ -49,6 +52,9 @@
                         <div class="descriptive">
                             <p class="descriptive--details">Sur blini à la farine de blé noir</p>
                             <p class="descriptive--price">35€</p>
+                        </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </div>
@@ -60,6 +66,9 @@
                             <p class="descriptive--details">Mariné aux zestes d'orange</p>
                             <p class="descriptive--price">20€</p>
                         </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
 
@@ -69,6 +78,9 @@
                         <div class="descriptive">
                             <p class="descriptive--details">Confiture de figue et pain toasté</p>
                             <p class="descriptive--price">35€</p>
+                        </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </div>
@@ -83,6 +95,9 @@
                                 <p class="descriptive--details">Sur lit de purée de céleri-rave</p>
                                 <p class="descriptive--price">40€</p>
                             </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </a>
                     </div>
 
@@ -93,6 +108,9 @@
                                 <p class="descriptive--details">Purée de patate douce</p>
                                 <p class="descriptive--price">35€</p>
                             </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </a>
                     </div>
 
@@ -102,6 +120,9 @@
                             <div class="descriptive">
                                 <p class="descriptive--details">Et riz sauvage aux zests de citron</p>
                                 <p class="descriptive--price">44€</p>
+                            </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </a>
                     </div>
@@ -116,6 +137,9 @@
                                     <p class="descriptive--details">Glace au caramel brun et sel de Guérande</p>
                                     <p class="descriptive--price">18€</p>
                                 </div>
+                                <div class="palette--checkicon">
+                                    <i class="fas fa-check-circle"></i>
+                                </div>
                             </a>
                         </div>
 
@@ -126,6 +150,9 @@
                                     <p class="descriptive--details">Avec son coulis de citron</p>
                                     <p class="descriptive--price">22€</p>
                                 </div>
+                                <div class="palette--checkicon">
+                                    <i class="fas fa-check-circle"></i>
+                                </div>
                             </a>
                         </div>
 
@@ -135,6 +162,9 @@
                                 <div class="descriptive">
                                     <p class="descriptive--details">Destructurée</p>
                                     <p class="descriptive--price">23€</p>
+                                </div>
+                                <div class="palette--checkicon">
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                             </a>
                         </div>
