--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 </head>
 
 <body>
-    <div class="spinner">
-        <div class="spinner--quart"></div>
-        <span class="spinner--load">Loading</span>
-        <span class="spinner--dot spinner--dot1">.</span>
-        <span class="spinner--dot spinner--dot2">.</span>
-        <span class="spinner--dot spinner--dot3">.</span>
+    <div class="container">
+        <div class="spinner">
+            <div class="spinner--quart"></div>
+            <span class="spinner--load">Loading</span>
+            <span class="spinner--dot spinner--dot1">.</span>
+            <span class="spinner--dot spinner--dot2">.</span>
+            <span class="spinner--dot spinner--dot3">.</span>
+        </div>
     </div>
-
     <header>
             <h1 class="logo--main">ohmyfood</h1>
     </header>
