--- a/3-a_ la_francaise.html
+++ b/3-a_ la_francaise.html
@@ -40,6 +40,9 @@
                             <p class="descriptive--details">Aux zests d'orange</p>
                             <p class="descriptive--price">25€</p>
                         </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
 
@@ -50,6 +53,9 @@
                             <p class="descriptive--details">Carotte, panais, topinambour</p>
                             <p class="descriptive--price">35€</p>
                         </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
 
@@ -59,6 +65,9 @@
                         <div class="descriptive">
                             <p class="descriptive--details">Revisitée</p>
                             <p class="descriptive--price">20€</p>
+                        </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </div>
@@ -73,6 +82,9 @@
                                 <p class="descriptive--details">Accompagnées d'une purée de panais</p>
                                 <p class="descriptive--price">40€</p>
                             </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </a>
                     </div>
 
@@ -83,6 +95,9 @@
                                 <p class="descriptive--details">Et parmentier de pommes de terres</p>
                                 <p class="descriptive--price">35€</p>
                             </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </a>
                     </div>
 
@@ -92,6 +107,9 @@
                             <div class="descriptive">
                                 <p class="descriptive--details">Sur son lit de gnocchis aux légumes</p>
                                 <p class="descriptive--price">44€</p>
+                            </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </a>
                     </div>
@@ -106,6 +124,9 @@
                                     <p class="descriptive--details">Et purée de noisettes</p>
                                     <p class="descriptive--price">18€</p>
                                 </div>
+                                <div class="palette--checkicon">
+                                    <i class="fas fa-check-circle"></i>
+                                </div>
                             </a>
                         </div>
 
@@ -116,6 +137,9 @@
                                     <p class="descriptive--details">Revisité</p>
                                     <p class="descriptive--price">22€</p>
                                 </div>
+                                <div class="palette--checkicon">
+                                    <i class="fas fa-check-circle"></i>
+                                </div>
                             </a>
                         </div>
 
@@ -125,6 +149,9 @@
                                 <div class="descriptive">
                                     <p class="descriptive--details">Myrtilles et pâte d'amande</p>
                                     <p class="descriptive--price">23€</p>
+                                </div>
+                                <div class="palette--checkicon">
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                             </a>
                         </div>
