--- a/4-delice_des_sens.html
+++ b/4-delice_des_sens.html
@@ -40,6 +40,9 @@
                             <p class="descriptive--details">Assaisonné au yuzu</p>
                             <p class="descriptive--price">25€</p>
                         </div>
+                        <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
 
@@ -50,6 +53,9 @@
                             <p class="descriptive--details">Et sa farandole de petits légumes</p>
                             <p class="descriptive--price">35€</p>
                         </div>
+                        <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
 
@@ -59,6 +65,9 @@
                         <div class="descriptive">
                             <p class="descriptive--details">Aux truffes</p>
                             <p class="descriptive--price">20€</p>
+                        </div>
+                        <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </div>
@@ -73,6 +82,9 @@
                                 <p class="descriptive--details">Et sa crème de truffe</p>
                                 <p class="descriptive--price">40€</p>
                             </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </a>
                     </div>
 
@@ -83,6 +95,9 @@
                                 <p class="descriptive--details">Et ses légumes de saison</p>
                                 <p class="descriptive--price">35€</p>
                             </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </a>
                     </div>
 
@@ -92,6 +107,9 @@
                             <div class="descriptive">
                                 <p class="descriptive--details">Et sa purée de panais</p>
                                 <p class="descriptive--price">44€</p>
+                            </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
                             </div>
                         </a>
                     </div>
@@ -106,6 +124,9 @@
                                     <p class="descriptive--details">Du chef</p>
                                     <p class="descriptive--price">18€</p>
                                 </div>
+                                <div class="palette--checkicon">
+                                    <i class="fas fa-check-circle"></i>
+                                </div>
                             </a>
                         </div>
 
@@ -116,6 +137,9 @@
                                     <p class="descriptive--details">Revisitée</p>
                                     <p class="descriptive--price">22€</p>
                                 </div>
+                                <div class="palette--checkicon">
+                                    <i class="fas fa-check-circle"></i>
+                                </div>
                             </a>
                         </div>
 
@@ -125,6 +149,9 @@
                                 <div class="descriptive">
                                     <p class="descriptive--details">À la noisette</p>
                                     <p class="descriptive--price">23€</p>
+                                </div>
+                                <div class="palette--checkicon">
+                                    <i class="fas fa-check-circle"></i>
                                 </div>
                             </a>
                         </div>
