codage CSS responsive

--- a/3-a_ la_francaise.html
+++ b/3-a_ la_francaise.html
@@ -25,135 +25,136 @@
         <img src="images/restaurants/3-a_la_francaise.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture--francaise" />
 
         <div class="composition">
-            <h2 class="composition--title">À la française
-                <p class="composition__heart--black"></p>
-                <p class="composition__heart--white"></p> 
-            </h2>
+            <div class="composition--title">
+                <h2>La palette du goût</h2>
+                <span class="composition__heart--black"></span>
+                <span class="composition__heart--white"></span> 
+            </div>
 
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
                 <div class="palette__cards delay--one">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Tartare de poulpe acidulé</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Aux zests d'orange</p>
                             <p class="descriptive--price">25€</p>
                         </div>
-                        <div class="palette--checkicon">
+                    </div>
+                    <div class="palette--checkicon">
                             <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="palette__cards delay--two">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Velouté de légumes d'antan</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Carotte, panais, topinambour</p>
                             <p class="descriptive--price">35€</p>
                         </div>
-                        <div class="palette--checkicon">
+                    </div>
+                    <div class="palette--checkicon">
                             <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="palette__cards delay--three">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Soupe à l'oignon</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Revisitée</p>
                             <p class="descriptive--price">20€</p>
                         </div>
-                        <div class="palette--checkicon">
+                    </div>
+                    <div class="palette--checkicon">
                             <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="palette__dishes">
                     <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
                     <div class="palette__cards delay--one">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Coquilles Saint-Jacques</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Accompagnées d'une purée de panais</p>
                                 <p class="descriptive--price">40€</p>
                             </div>
-                            <div class="palette--checkicon">
+                        </div>
+                        <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                            </div>
-                        </a>
+                        </div>
                     </div>
 
                     <div class="palette__cards delay--two">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Magret de canard</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et parmentier de pommes de terres</p>
                                 <p class="descriptive--price">35€</p>
                             </div>
-                            <div class="palette--checkicon">
+                        </div>
+                        <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                            </div>
-                        </a>
+                        </div>
                     </div>
 
                     <div class="palette__cards delay--three">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Pigeonneau d'Ille-et-Vilaine</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Sur son lit de gnocchis aux légumes</p>
                                 <p class="descriptive--price">44€</p>
                             </div>
-                            <div class="palette--checkicon">
+                        </div>
+                        <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                            </div>
-                        </a>
+                        </div>
                     </div>
 
                     <div class="palette__desserts">
                         <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
                         <div class="palette__cards delay--one">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Pétales de violettes glacés</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Et purée de noisettes</p>
                                     <p class="descriptive--price">18€</p>
                                 </div>
-                                <div class="palette--checkicon">
+                            </div>
+                            <div class="palette--checkicon">
                                     <i class="fas fa-check-circle"></i>
-                                </div>
-                            </a>
+                            </div>
                         </div>
 
                         <div class="palette__cards delay--two">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Fondant au chocolat</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Revisité</p>
                                     <p class="descriptive--price">22€</p>
                                 </div>
-                                <div class="palette--checkicon">
+                            </div>
+                            <div class="palette--checkicon">
                                     <i class="fas fa-check-circle"></i>
-                                </div>
-                            </a>
+                            </div>
                         </div>
 
                         <div class="palette__cards delay--three">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Millefeuille croustillant</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Myrtilles et pâte d'amande</p>
                                     <p class="descriptive--price">23€</p>
                                 </div>
-                                <div class="palette--checkicon">
+                            </div>
+                            <div class="palette--checkicon">
                                     <i class="fas fa-check-circle"></i>
-                                </div>
-                            </a>
+                            </div>
                         </div>
                     </div>
                     
