--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!--
     <div class="container">
         <div class="spinner">
             <div class="spinner--quart"></div>
@@ -24,6 +25,7 @@
             <span class="spinner--dot spinner--dot3">.</span>
         </div>
     </div>
+    -->
     <header>
             <h1 class="logo--main">ohmyfood</h1>
     </header>
@@ -63,7 +65,7 @@
     
     <section class="menu">
         <h2 class="menu--title">Restaurants</h2>
-
+        <div class="container--menu">
             <article class="menu__cards">
                 <a href="1-palette_du_gout.html" class="menu__cards--link">
                     <img src="images/restaurants/1-Palette_du_gout.jpg" alt="photo montrant un plat gastronomique" 
@@ -83,7 +85,7 @@
                     <h2 class="menu__cards--title">La note enchantée</h2>
                     <p class="menu__cards--describe">Charonne</p>
                     <div class="menu__heart--black"></div>
-                    <div class="menu__heart--white"></div>           
+                    <div class="menu__heart--white"></div>         
                     <span class="menu--new">Nouveau</span>
                 </a>    
             </article>
@@ -109,7 +111,7 @@
                     <div class="menu__heart--white"></div>  
                 </a>
             </article>
-
+        </div>
     </section>
 
     <footer>
