--- a/1-palette_du_gout.html
+++ b/1-palette_du_gout.html
@@ -25,135 +25,136 @@
         <img src="images/restaurants/1-Palette_du_gout.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture" />
 
         <div class="composition">
-            <h2 class="composition--title">La palette du goût
-                <p class="composition__heart--black"></p>
-                <p class="composition__heart--white"></p> 
-            </h2>
+            <div class="composition--title">
+                <h2>La palette du goût</h2>
+                <span class="composition__heart--black"></span>
+                <span class="composition__heart--white"></span> 
+            </div>
 
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
                 <div class="palette__cards delay--one">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Fricassée d'escargot</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Au piment d'espelette</p>
                             <p class="descriptive--price">25€</p>
                         </div>
-                    </a>
+                    </div>
                     <div class="palette--checkicon">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
 
                 <div class="palette__cards delay--two">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Foie gras de canard mi-cuit</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Et ses copeaux de truffe noire</p>
                             <p class="descriptive--price">35€</p>
                         </div>
-                        <div class="palette--checkicon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
+                    <div class="palette--checkicon">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
 
                 <div class="palette__cards delay--three">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Oeuf au plat</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Assaisonnée à la truffe sur lit de caviar</p>
                             <p class="descriptive--price">20€</p>
                         </div>
-                        <div class="palette--checkicon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
+                    <div class="palette--checkicon">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
 
                 <div class="palette__dishes">
                     <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
                     <div class="palette__cards delay--one">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Filet de boeuf aux herbes</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Accompagné de sa ribambelle de légumes</p>
                                 <p class="descriptive--price">40€</p>
                             </div>
+                        </div>
                         <div class="palette--checkicon">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        </a>
                     </div>
 
                     <div class="palette__cards delay--two">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Parmentier de queue de boeuf</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">À la truffe noire sur sa purée de panais</p>
                                 <p class="descriptive--price">35€</p>
                             </div>
+                        </div>
                         <div class="palette--checkicon">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        </a>
                     </div>
 
                     <div class="palette__cards delay--three">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Filet de Turbot</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Aux agrumes</p>
                                 <p class="descriptive--price">44€</p>
                             </div>
+                        </div>
                         <div class="palette--checkicon">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        </a>
                     </div>
 
                     <div class="palette__desserts">
                         <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
                         <div class="palette__cards delay--one">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Paris-Brest</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Revisité</p>
                                     <p class="descriptive--price">18€</p>
                                 </div>
+                            </div>
                             <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
                             </div>
-                            </a>
                         </div>
 
                         <div class="palette__cards delay--two">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Macaron au chocolat d'exception</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Et glace à la vanille de Madagascare</p>
                                     <p class="descriptive--price">22€</p>
                                 </div>
+                            </div>
                             <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
                             </div>
-                            </a>
                         </div>
 
                         <div class="palette__cards delay--three">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Mousse au chocolat</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Au piment d'espelette et à la truffe noire</p>
                                     <p class="descriptive--price">23€</p>
                                 </div>
+                            </div>
                             <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
                             </div>
-                            </a>
                         </div>
                     </div>
 
