--- a/2-la_note_enchantee.html
+++ b/2-la_note_enchantee.html
@@ -25,148 +25,149 @@
         <img src="images/restaurants/2-Note_enchantee.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture--enchantee" />
 
         <div class="composition">
-            <h2 class="composition--title">La note enchantée
-                <p class="composition__heart--black"></p>
-                <p class="composition__heart--white"></p> 
-            </h2>
+            <div class="composition--title">
+                <h2>La palette du goût</h2>
+                <span class="composition__heart--black"></span>
+                <span class="composition__heart--white"></span> 
+            </div>
 
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
                 <div class="palette__cards delay--one">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Raviole de foie gras</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Accompagnés de leur crème à la truffe</p>
                             <p class="descriptive--price">25€</p>
                         </div>
-                        <div class="palette--checkicon">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
+                    <div class="palette--checkicon">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
 
                 <div class="palette__cards delay--two">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Caviar osciètre</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Sur blini à la farine de blé noir</p>
                             <p class="descriptive--price">35€</p>
                         </div>
-                        <div class="palette--checkicon">
+                    </div>
+                    <div class="palette--checkicon">
                             <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="palette__cards delay--three">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Homard et espuma de potiron</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Mariné aux zestes d'orange</p>
                             <p class="descriptive--price">20€</p>
                         </div>
-                        <div class="palette--checkicon">
+                    </div>
+                    <div class="palette--checkicon">
                             <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="palette__cards delay--three">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Foie gras de canard cuit entier</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Confiture de figue et pain toasté</p>
                             <p class="descriptive--price">35€</p>
                         </div>
-                        <div class="palette--checkicon">
+                    </div>
+                    <div class="palette--checkicon">
                             <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="palette__dishes">
                     <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
                     <div class="palette__cards delay--one">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Noix de coquilles Saint-Jacques</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Sur lit de purée de céleri-rave</p>
                                 <p class="descriptive--price">40€</p>
                             </div>
-                            <div class="palette--checkicon">
+                        </div>
+                        <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                            </div>
-                        </a>
+                        </div>
                     </div>
 
                     <div class="palette__cards delay--two">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Langoustine poêlée</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Purée de patate douce</p>
                                 <p class="descriptive--price">35€</p>
                             </div>
-                            <div class="palette--checkicon">
+                        </div>
+                        <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                            </div>
-                        </a>
+                        </div>
                     </div>
 
                     <div class="palette__cards delay--three">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Mijoté de queue de boeuf</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et riz sauvage aux zests de citron</p>
                                 <p class="descriptive--price">44€</p>
                             </div>
-                            <div class="palette--checkicon">
+                        </div>
+                        <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                            </div>
-                        </a>
+                        </div>
                     </div>
 
                     <div class="palette__dessert">
                         <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
                         <div class="palette__cards delay--one">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Macaron noisette et chocolat</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Glace au caramel brun et sel de Guérande</p>
                                     <p class="descriptive--price">18€</p>
                                 </div>
-                                <div class="palette--checkicon">
+                            </div>
+                            <div class="palette--checkicon">
                                     <i class="fas fa-check-circle"></i>
-                                </div>
-                            </a>
+                            </div>
                         </div>
 
                         <div class="palette__cards delay--two">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Baba au rhum revisité</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Avec son coulis de citron</p>
                                     <p class="descriptive--price">22€</p>
                                 </div>
-                                <div class="palette--checkicon">
+                            </div>
+                            <div class="palette--checkicon">
                                     <i class="fas fa-check-circle"></i>
-                                </div>
-                            </a>
+                            </div>
                         </div>
 
                         <div class="palette__cards delay--three">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Tarte au citron meringuée</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Destructurée</p>
                                     <p class="descriptive--price">23€</p>
                                 </div>
-                                <div class="palette--checkicon">
-                                    <i class="fas fa-check-circle"></i>
-                                </div>
-                            </a>
+                            </div>
+                            <div class="palette--checkicon">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </div>
                     </div>
 
