--- a/4-delice_des_sens.html
+++ b/4-delice_des_sens.html
@@ -25,135 +25,136 @@
         <img src="images/restaurants/4-Delice_des_sens.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture" />
 
         <div class="composition">
-            <h2 class="composition--title">Le délice des sens
-                <p class="composition__heart--black"></p>
-                <p class="composition__heart--white"></p> 
-            </h2>
+            <div class="composition--title">
+                <h2>La palette du goût</h2>
+                <span class="composition__heart--black"></span>
+                <span class="composition__heart--white"></span> 
+            </div>
 
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
                 <div class="palette__cards delay--one">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Tartare de thon</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Assaisonné au yuzu</p>
                             <p class="descriptive--price">25€</p>
                         </div>
-                        <div class="palette--checkicon">
+                    </div>
+                    <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="palette__cards delay--two">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Bouchée de homard croustillant</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Et sa farandole de petits légumes</p>
                             <p class="descriptive--price">35€</p>
                         </div>
-                        <div class="palette--checkicon">
+                    </div>
+                    <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="palette__cards delay--three">
-                    <a href="#" class="palette--link">
+                    <div class="palette--link">
                         <h2 class="dish__name">Velouté de cèpes</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Aux truffes</p>
                             <p class="descriptive--price">20€</p>
                         </div>
-                        <div class="palette--checkicon">
+                    </div>
+                    <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                        </div>
-                    </a>
+                    </div>
                 </div>
 
                 <div class="palette__dishes">
                     <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
                     <div class="palette__cards delay--one">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Poulet rôti aux herbes de provence</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et sa crème de truffe</p>
                                 <p class="descriptive--price">40€</p>
                             </div>
-                            <div class="palette--checkicon">
-                                <i class="fas fa-check-circle"></i>
-                            </div>
-                        </a>
+                        </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
                     <div class="palette__cards delay--two">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Langouste rôtie</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et ses légumes de saison</p>
                                 <p class="descriptive--price">35€</p>
                             </div>
-                            <div class="palette--checkicon">
+                        </div>
+                        <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                            </div>
-                        </a>
+                        </div>
                     </div>
 
                     <div class="palette__cards delay--three">
-                        <a href="#" class="palette--link">
+                        <div class="palette--link">
                             <h2 class="dish__name">Côte de boeuf angus</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et sa purée de panais</p>
                                 <p class="descriptive--price">44€</p>
                             </div>
-                            <div class="palette--checkicon">
+                        </div>
+                        <div class="palette--checkicon">
                                 <i class="fas fa-check-circle"></i>
-                            </div>
-                        </a>
+                        </div>
                     </div>
 
                     <div class="palette__desserts">
                         <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
                         <div class="palette__cards delay--one">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Farandole de desserts</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Du chef</p>
                                     <p class="descriptive--price">18€</p>
                                 </div>
-                                <div class="palette--checkicon">
+                            </div>
+                            <div class="palette--checkicon">
                                     <i class="fas fa-check-circle"></i>
-                                </div>
-                            </a>
+                            </div>
                         </div>
 
                         <div class="palette__cards delay--two">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Crème brulée</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Revisitée</p>
                                     <p class="descriptive--price">22€</p>
                                 </div>
-                                <div class="palette--checkicon">
+                            </div>
+                            <div class="palette--checkicon">
                                     <i class="fas fa-check-circle"></i>
-                                </div>
-                            </a>
+                            </div>
                         </div>
 
                         <div class="palette__cards delay--three">
-                            <a href="#" class="palette--link">
+                            <div class="palette--link">
                                 <h2 class="dish__name">Tiramisu</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">À la noisette</p>
                                     <p class="descriptive--price">23€</p>
                                 </div>
-                                <div class="palette--checkicon">
+                            </div>
+                            <div class="palette--checkicon">
                                     <i class="fas fa-check-circle"></i>
-                                </div>
-                            </a>
+                            </div>
                         </div>
 
                         <a href="#" class="order__buton">
