--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
     <script src="https://kit.fontawesome.com/7c1a4ed08f.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/svg+xml" href="images/logo/ohmyfood.svg">
     <title>ohmyfood</title>
